objects/Feature_Case__c.object
<CustomObject>
    <description>A junction object representing the connection between a Feature and a Case.</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case that is linked to a Feature.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Features with Cases</relationshipLabel>
        <relationshipName>Features_Cases_Case</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <description>Feature that is linked to a Case.</description>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Features with Cases</relationshipLabel>
        <relationshipName>Features_Cases_Feature</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feature_with_Case_Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique identifier for junction records</description>
        <label>Feature with Case Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional notes for the junction object.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Features with Cases</label>
    <nameField>
        <displayFormat>FC-{0000000}</displayFormat>
        <label>Feature with Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Features with Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>